# Misc-Algorithms

./: .gitignore  CMakeLists.txt  README.md  test_framework.h
interviewbit/: rotate_matrix.cpp  spiral_order_matrix_2.cpp
src/: CMakeLists.txt  main.cpp
src/arrays/: two_sum.cpp
src/backtracking/: N_queen.cpp  backtracking.h  subsets.cpp
src/dynamic_programming/: longest_common_subsequence.cpp
src/graph/: graph.cpp
src/linked_list/: linked_list.cpp
src/matrix/: print_diagonal.cpp
src/strings/: kmp.cpp
src/tests/: CMakeLists.txt  test_groups.h  tree_test.cpp
src/tree/: CMakeLists.txt  bst.cpp  bt_to_bst.cpp  isomorphic.c  tree.h  tree_util.cpp
src_mk/arrays/: duplicate.cpp  spiral_matrix.cpp
src_mk/backtracking/: backtracking.h  subsets.cpp
src_mk/dynamic_programming/: bin_coeff.cpp  fibanocci.cpp  longest_increasing_subsequence.cpp
src_mk/graph/: graph.cpp
src_mk/matrix/: print_diagonal.cpp
src_mk/stack/: histrogram.cpp
src_mk/strings/: kmp.cpp
src_mk/trie/: trie.cpp
tests/: CMakeLists.txt  array_test.cpp  bst_test.cpp  dp_test.cpp  list_test.cpp  misc_test.cpp  stack_test.cpp  test_groups.h  tree_test.cpp
